////
[[release-notes-x.x.x]]
==== x.x.x - YYYY/MM/DD

[float]
===== Breaking changes

[float]
===== Features
* Cool new feature: {pull}2526[#2526]

[float]
===== Bug fixes
////

=== Unreleased

// Unreleased changes go here
// When the next release happens, nest these changes under the "Python Agent version 5.x" heading

[float]
===== New features
 * Added SERVICE_NODE_NAME config {pull}592[#592]

[float]
===== Bug fixes
 * Fixed an issue with metrics collection raising RuntimeErrors {pull}802[#802]

[[release-notes-5.x]]
=== Python Agent version 5.x

[[release-notes-5.5.2]]
==== v5.5.2

[float]
===== Bug fixes
* Fixed an issue with Redis using unix domain sockets and destination information {pull}766[#766]

[[release-notes-5.5.1]]
==== v5.5.1

[float]
===== Bug fixes
* Fixed Starlette middleware when capturing request body while the content-type header is absent {pull}763[#763]

[[release-notes-5.5.0]]
==== v5.5.0

[float]
===== Features
* Added destination information to database/HTTP spans, used for service maps {pull}618[#618]

[float]
===== Deprecations

 * *Python 3.4 is no longer supported.*


[[release-notes-5.4.3]]
==== v5.4.3

https://github.com/elastic/apm-agent-python/compare/v5.4.2\...v5.4.3[Check the diff]

[float]
===== Bug fixes

 * fixed a bug in our aiohttp.client support if used with a yarl URL {pull}733[#733]

[[release-notes-5.4.2]]
==== v5.4.2

https://github.com/elastic/apm-agent-python/compare/v5.4.1\...v5.4.2[Check the diff]

[float]
===== Bug fixes

 * fixed a bug in our celery implementation related to the threading refactor in 5.4.0 {pull}724[#724]

[[release-notes-5.4.1]]
==== v5.4.1

https://github.com/elastic/apm-agent-python/compare/v5.4.0\...v5.4.1[Check the diff]

[float]
===== Bug fixes

 * fixed an issue with a DEBUG log message raising an error in some cases {pull}722[#722]

[[release-notes-5.4.0]]
==== v5.4.0

https://github.com/elastic/apm-agent-python/compare/v5.3.3\...v5.4.0[Check the diff]

[float]
===== Deprecations
