@@ -52,7 +52,7 @@ include_trailing_comma=true
 known_standard_library=importlib,types,asyncio,contextvars
 known_django=django
 known_first_party=elasticapm,tests
-known_third_party=StringIO,__pypy__,aiohttp,async_timeout,boto3,cachetools,cassandra,celery,certifi,elasticsearch,flask,jinja2,jsonschema,logbook,memcache,mock,pkg_resources,psycopg2,psycopg2cffi,pymongo,pytest,pytest_localserver,redis,requests,setuptools,simplejson,twisted,urllib2,urllib3,urllib3_mock,urlparse,uwsgi,webob,werkzeug,zope,asynctest,opentracing,eventlet,tornado,starlette,multidict,pytest_bdd
+known_third_party=StringIO,__pypy__,aiohttp,async_timeout,boto3,cachetools,cassandra,celery,certifi,elasticsearch,flask,jinja2,jsonschema,logbook,memcache,mock,pkg_resources,psycopg2,psycopg2cffi,pymongo,pytest,pytest_localserver,redis,requests,setuptools,simplejson,twisted,urllib2,urllib3,urllib3_mock,urlparse,uwsgi,webob,werkzeug,zope,asynctest,opentracing,eventlet,tornado,starlette,multidict,pytest_bdd,pymemcache
 default_section=FIRSTPARTY
 sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
 
