@@ -1,0 +1,3 @@
+export PYTEST_MARKER="-m pymemcache"
+export DOCKER_DEPS="memcached"
+export MEMCACHED_HOST="memcached"
